GH-2552 - Align punctuation in Exception messages with Spring Data Commons.
Closes #2552